--- a/src/index.css
+++ b/src/index.css
@@ -3,12 +3,23 @@
 @font-face {
   font-family: 'BaseFont';
   /* src: url('/fonts/Ansungtangmyun-ESG.otf') format('opentype'); */
-  /* src: url('/fonts/BinggraeMelona-Bold.otf') format('opentype'); */
-  src: url('/fonts/CookieRun Regular.ttf') format('opentype');
-  font-weight: normal;
+  src: url('/fonts/BinggraeMelona.otf') format('opentype');
+  /* src: url('/fonts/CookieRun Regular.ttf') format('opentype'); */
+  font-weight: 400;
   font-style: normal;
   font-display: swap;
 }
+
+@font-face {
+  font-family: 'BaseFont';
+  /* src: url('/fonts/Ansungtangmyun-ESG.otf') format('opentype'); */
+  src: url('/fonts/BinggraeMelona-Bold.otf') format('opentype');
+  /* src: url('/fonts/CookieRun Regular.ttf') format('opentype'); */
+  font-weight: 700;
+  font-style: normal;
+  font-display: swap;
+}
+
 
 @layer base {
   html {
@@ -18,7 +29,8 @@
 
 @layer base {
   html {
-    font-size: 17px;
+    font-size: 14px;
     font-family: 'BaseFont', sans-serif;
+    font-weight: 400;
   }
 }
